# NautiPlan

./: .gitignore  .gitmodules  .prettierrc  README copy.md  README.md  index.html  package-lock.json  package.json
.github/prompts/: code.prompt.md
.github/workflows/: android-build.yml
cpp/: CMakeLists.txt  Makefile  install.bat
cpp/inc/: llm_bluelm.h  llm_capi.h  llm_instance.h  llm_utils.h
cpp/src/: llm_bluelm.cpp  llm_capi.cpp
dataset/: gen_dataset.py  json_to_jsonl.py  jsonl_to_json.py  training_dataset_500.json  training_dataset_500.jsonl
docs/: DYNAMIC_PRIORITY_LOGIC.md  INFERENCE_CORE.md  INFERENCE_INTERFACE.md  INFERENCE_PLUGIN.md  SECURE_STORAGE.md
img/: architecture.drawio  backend_layer .drawio  inferrence_workflow.drawio  presentation_layer.drawio
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: aliyun_audio.rs  aliyun_gpt.rs  aliyun_image.rs  aliyun_report.rs  get_sandbox_dir.rs  mod.rs  model_manage.rs  web_search.rs
src/components/: AIPlanner.tsx  ApiKey.tsx  CalendarCells.tsx  CalendarModal.tsx  CalendarSidebar.tsx  CalendarUtils.tsx  Nautilus.tsx  OverdueTaskNotification.tsx  Pagination.tsx  PlanList.tsx  RecommendedResources.tsx  Report.tsx  ShowNewPlan.tsx  TabBarBase.tsx  TabBarBaseDemo.tsx  TimerPanel.tsx  TodoPanel.tsx
src/components/LocalModelView/: Embedding.tsx  Llm.tsx  ModelDownload.tsx  Rag.tsx
src/interface/: chat.ts  fileWithMeta.ts  report.ts  resource.ts  task.ts
src/pages/: AIPlannerView.tsx  CalendarView.tsx  LocalModelView.tsx  PlanView.tsx  TodoView.tsx
src/store/: llm.md  llmStore.ts  modelStore.ts  taskStore.ts  timerStore.ts  todoStore.ts
src/styles/components/: AIPlanner.css  CalendarModal.css  Nautilus.css  OverdueTaskNotification.css  PlanList.css  RecommendedResources.css  TabBarBase.css  transitions.css
src/styles/pages/: AIPlannerView.css  CalendarView.css  LocalModelView.css  PlanView.css  TodoView.css
src/utils/: apiKey.ts  auth.ts  chat.ts  database.ts  edgellm.ts  llmChat.ts  multiModal.ts  multiModalAudio.ts  multiModalImage.ts  priority.ts  prompt.ts  recommendRes.ts  report.ts  webSearch.ts
tauri-plugin-secure-storage/: Cargo.toml  README.md  build.rs  package.json
tauri-plugin-secure-storage/android/: build.gradle.kts
tauri-plugin-secure-storage/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-secure-storage/android/src/main/java/: SecureStorage.kt
tauri-plugin-secure-storage/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-secure-storage/guest-js/: index.ts
tauri-plugin-secure-storage/permissions/: default.toml
tauri-plugin-secure-storage/permissions/autogenerated/: reference.md
tauri-plugin-secure-storage/permissions/schemas/: schema.json
tauri-plugin-secure-storage/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
tauri-plugin-taskpilot-inference/: .gitignore  Cargo.toml  README.md  build.rs
tauri-plugin-taskpilot-inference/android/: .gitignore  build.gradle.kts  settings.gradle
tauri-plugin-taskpilot-inference/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-taskpilot-inference/android/src/main/: AndroidManifest.xml
tauri-plugin-taskpilot-inference/android/src/main/java/: ExamplePlugin.kt
tauri-plugin-taskpilot-inference/permissions/: default.toml
tauri-plugin-taskpilot-inference/permissions/autogenerated/: reference.md
tauri-plugin-taskpilot-inference/permissions/autogenerated/commands/: embedding_encode.toml  embedding_init.toml  embedding_release.toml  embedding_status.toml  list_dir_contents.toml  llm_chat.toml  llm_chat_stream.toml  llm_init.toml  llm_release.toml  llm_server_start.toml  llm_server_url.toml  llm_status.toml  rag_add_document.toml  rag_clear.toml  rag_init.toml  rag_release.toml  rag_retrieve.toml  rag_status.toml  string_free.toml
tauri-plugin-taskpilot-inference/permissions/schemas/: schema.json
tauri-plugin-taskpilot-inference/src/: error.rs  ffi.rs  lib.rs  state.rs  stream.rs
tauri-plugin-taskpilot-inference/src/commands/: download.rs  embedding.rs  llm.rs  mod.rs  rag.rs  string.rs
test/: MuLtiModal.py  auth_util.py  test.py
