[package]
name = "tauri-plugin-secure-storage"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-secure-storage"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
keyring = "3"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
