[package]
name = "tauri-plugin-taskpilot-inference"
version = "0.1.0"
authors = ["taskPilot"]
edition = "2021"
description = "Tauri plugin for taskPilot Inference Core (C++)"
links = "tauri-plugin-taskpilot-inference"

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }
cmake = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]
