[package]
name = "tauri-plugin-taskpilot-inference"
version = "0.1.0"
authors = ["TaskPilot Team"]
description = "Tauri plugin for TaskPilot Inference Core - 端侧 LLM/Embedding/RAG 推理"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-taskpilot-inference"

[dependencies]
tauri = { version = "2.5.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
